--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link type="image/x-icon" href="./images/fav/favicon.ico" rel="shortcut icon">
+  <link type="Image/x-icon" href="./images/fav/favicon.ico" rel="icon">
   <title>IceCream</title>
   <link rel="stylesheet" href="./sass/index.scss" />
   <link rel="stylesheet"
