--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
     href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&family=Seymour+One&display=swap" />
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css"> -->
   <script type="module" src="./index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
 </head>
 
 <body>
@@ -28,6 +30,7 @@
   </main>
   <include src="./partials/footer.html"></include>
   <include src="./partials/modal-window.html"></include>
+
 </body>
 
 </html>
