--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
   <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
   <script src="./js/scroll.js"></script>
   <script src="./js/wow.min.js"></script>
-  <script src="./js/WOW.js"></script>
+  <script src="./js/wow.js"></script>
 </body>
 
 </html>
