--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,7 @@
   <script src="./js/scroll.js"></script>
   <script src="./js/wow.min.js"></script>
   <script src="./js/wow.js"></script>
+  <script src="./js/confetti.js"></script>
 </body>
 
 </html>
